# casual-java-cli

./: .gitignore  README.md
app/: build.gradle  gradle.properties  settings.gradle
app/casual-java-cli/: build.gradle
app/casual-java-cli-app/: build.gradle
app/casual-java-cli/src/main/java/se/laz/casual/java/cli/: CLIApplication.java  CLIExceptionMapper.java  CLIResource.java  CLIService.java  Util.java
app/casual-java-cli/src/main/java/se/laz/casual/java/cli/event/: EventListener.java  EventServiceStatistics.java  EventStore.java
app/casual-java-cli/src/main/java/se/laz/casual/java/cli/model/: Configuration.java  Connection.java  Queue.java  Service.java  ServiceStatistics.java
app/casual-java-cli/src/test/java/se/laz/casual/java/cli/: CLIResourceTest.java  CLIServiceTest.java
app/gradle/: libs.versions.toml
cli/: CMakeLists.txt  conanfile.txt
cli/example/: casual.env
cli/include/: cli.h  configuration.h  constants.h  discovery.h  http.h  model.h  queue.h  service.h
cli/source/: cli.cpp  configuration.cpp  discovery.cpp  http.cpp  queue.cpp  service.cpp
